--- a/patientdashboard/templates/patientdashboard/search.html
+++ b/patientdashboard/templates/patientdashboard/search.html
@@ -66,7 +66,7 @@
                                 <!-- Booking Buttons -->
                                 <div class="clinic-booking mt-3">
                                     <a href="{% url 'patientdashboard:practitioner_profile' practitioner.id %}" class="btn btn-primary btn-sm">View Profile</a>
-                                    <a href="{% url 'patient_dashboard:booking' %}" class="btn btn-outline-primary btn-sm">Book Appointment</a>
+                                    <a href="{% url 'patient_dashboard:specialty_selection' %}" class="btn btn-outline-primary btn-sm">Book Appointment</a>
                                 </div>
                             </div>
                         </div>
